--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "ts-config-single-spa",
   "compilerOptions": {
     "jsx": "react-jsx",
-    "declarationDir": "dist"
+    "declarationDir": "dist",
+    "target": "es5"
   },
   "files": ["src/agnos-agnos-web-designer.tsx"],
   "include": ["src/**/*"],
