--- a/package.json
+++ b/package.json
@@ -50,15 +50,16 @@
     "webpack-config-single-spa-react-ts": "^4.0.0"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "single-spa-react": "^4.3.1",
     "@types/jest": "^27.0.1",
+    "@types/react": "^17.0.19",
+    "@types/react-dom": "^17.0.9",
     "@types/systemjs": "^6.1.1",
     "@types/webpack-env": "^1.16.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-zoom-pan-pinch": "^2.1.3",
     "single-spa": "^5.9.3",
-    "@types/react": "^17.0.19",
-    "@types/react-dom": "^17.0.9"
+    "single-spa-react": "^4.3.1"
   },
   "types": "dist/agnos-agnos-web-designer.d.ts"
 }
