--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/webpack-env": "^1.16.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-tiny-fab": "^4.0.3",
     "react-zoom-pan-pinch": "^2.1.3",
     "single-spa": "^5.9.3",
     "single-spa-react": "^4.3.1"
