--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "webpack-config-single-spa-react-ts": "^4.0.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@types/jest": "^27.0.1",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
@@ -57,6 +59,7 @@
     "@types/webpack-env": "^1.16.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flow-renderer": "^9.6.0",
     "react-tiny-fab": "^4.0.3",
     "react-zoom-pan-pinch": "^2.1.3",
     "single-spa": "^5.9.3",
