--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flow-renderer": "^9.6.0",
+    "react-native-uuid": "^2.0.1",
     "react-tiny-fab": "^4.0.3",
     "react-zoom-pan-pinch": "^2.1.3",
     "single-spa": "^5.9.3",
