--- a/appspec.yml
+++ b/appspec.yml
@@ -2,4 +2,22 @@ version: 0.0
 os: linux
 files:
     - source: /
-      destination: /home/ec2-user/nodejs #/var/www/html/
+      destination: /home/ec2-user/agnos #/var/www/html/
+permissions:
+  - objects: /
+    pattern: "**"
+    owner: ec2-user
+    group: ec2-user
+hooks:
+  BeforeInstall:
+    - location: scripts/before_install.sh
+    timeout: 300
+    runas: ec2-user
+  AfterInstall:
+    - location: scripts/after_install.sh
+    timeout: 300
+    runas: ec2-user
+  ApplicationStart:
+    - location: scripts/application_start.sh
+    timeout: 300
+    runas: ec2-user
