--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/runtime": "^7.15.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@types/dagre": "^0.7.46",
     "@types/dom-to-image": "^2.6.3",
     "@types/file-saver": "^2.0.3",
     "@types/testing-library__jest-dom": "^5.14.1",
@@ -62,6 +63,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/systemjs": "^6.1.1",
     "@types/webpack-env": "^1.16.2",
+    "dagre": "^0.8.5",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
     "react": "^17.0.2",
