--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "dagre": "^0.8.5",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
+    "localforage": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flow-renderer": "^9.6.0",
