--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/dagre": "^0.7.46",
     "@types/dom-to-image": "^2.6.3",
     "@types/file-saver": "^2.0.3",
+    "@types/react-router-dom": "^5.3.2",
     "@types/testing-library__jest-dom": "^5.14.1",
     "babel-jest": "^27.0.6",
     "concurrently": "^6.2.1",
@@ -71,6 +72,8 @@
     "react-dom": "^17.0.2",
     "react-flow-renderer": "^9.6.0",
     "react-native-uuid": "^2.0.1",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "react-zoom-pan-pinch": "^2.1.3",
     "single-spa": "^5.9.3",
     "single-spa-react": "^4.3.1"
