--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/systemjs": "^6.1.1",
     "@types/webpack-env": "^1.16.2",
+    "ajv": "^8.7.1",
     "dagre": "^0.8.5",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
