--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "scripts": {
     "start": "webpack serve --port 9003 --env isLocal",
     "start:standalone": "webpack serve --env standalone",
-    "build": "concurrently npm:build:*",
-    "build:webpack": "webpack --mode=production",
+    "build": "webpack --mode=production",
+    "build2": "concurrently npm:build:*",
     "analyze": "webpack --mode=production --env analyze",
     "lint": "eslint src --ext js,ts,tsx",
     "format": "prettier --write .",
